fixed broken font imort tweaked styles to prevent banner from being cut off

--- a/media/css/mozorg/home/fundraiser.scss
+++ b/media/css/mozorg/home/fundraiser.scss
@@ -9,7 +9,7 @@ $image-path: '/media/protocol/img';
 
 .c-fundraiser {
     @include clearfix;
-    background: $color-black;
+    background: $color-purple-90;
     background-size: cover;
     color: $color-white;
     padding: $spacing-md 0 0;
